# ChangeLog for net-irc/dancer-ircd
# Copyright 2002-2003 Gentoo Technologies, Inc.; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-irc/dancer-ircd/Attic/ChangeLog,v 1.3 2003/04/22 10:24:50 vapier Exp $

*dancer-ircd-1.0.31_p8 (06 Mar 2003)

  06 Mar 2003; Guy Martin <gmsoft@gentoo.org> dancer-ircd-1.0.31_p8.ebuild :
  Removed inherit eutils.

  06 Mar 2003; Guy Martin <gmsoft@gentoo.org> dancer-ircd-1.0.31_p8.ebuild :
  Initial import.
